--- a/1/Untitled.ipynb
+++ b/1/Untitled.ipynb
@@ -19,6 +19,7 @@
    ],
    "source": [
     "import csv\n",
+    "import pandas as pd\n",
     "with open(\"Enjoysport.csv\") as csv_file:\n",
     "    read_csv = csv.reader(csv_file, delimiter = \",\")\n",
     "    data = []\n",
@@ -136,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
